style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

html {
    box-sizing: border-box;
}

*, *::after, *::before {
    box-sizing: inherit;
}

body {
	line-height: 1;
    width: 100vw;
    background-color: rgb(34, 33, 33);
    font-family: 'Amatic SC', cursive;
    font-weight: 700;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

.container {
    display: flex;
    width: 80%;
    background-color: rgb(97, 103, 67);
    margin: 0 auto;
    margin-top: 100px;
    border-radius: 20px;
}

.container > img {
    padding: 10px;
    width: 300px;
    border-radius: 20px;
    filter: drop-shadow(1px 1px 10px);
}

.content {
    background-image: url(images/backgournd-content.jpg);
    margin: 10px;
    border-radius: 10px;
    width: 100%;
    padding: 20px;
    filter: drop-shadow(1px 1px 10px);
}

h1 {
    font-size: 2.5rem;
    color: black;
    margin-bottom: 20px;
}

p {
    font-size: 1.5rem;
    display: flex; 
    align-items: center;
}

input {
    border: none;
    border-radius: 10px;
    height: 30px;
    width: 100%;
    padding: 0 10px;
    font-family: 'Amatic SC', cursive;
    font-weight: 700;
    font-size: 1.2rem;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
}

input:focus-visible {
    background-color: rgba(0, 0, 0, 0.8);
    outline: none;
    
}

input:invalid {
    color: rgb(226, 82, 82);
}

label {
    display: inline-block;
    width: 200px;
    text-align: right;
}

form {
    display: flex;
    gap: 10px;
    flex-direction: column;
}

.btn {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 10px;
}

button {
    height: 30px;
    border-radius: 10px;
    border: none;
    background-color: rgba(0, 0, 0, 0.5);
    color: rgba(255, 255, 255, 0.5);
}

button:hover {
    color: white;
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.8);
}

.btn > p {
    font-size: 1.2rem;
}

a {
    margin: 0 5px;
    color: rgba(255, 255, 255, 0.6);
}

a:hover {
    margin: 0 5px;
    color: rgb(255, 255, 255);
}


@media (max-width: 800px) {
    .container {
        flex-direction: column;
        padding: 10px;
    }

    .content {
        margin: 0;
        
    }

    .container > img {
        width: 100%;
        margin: auto;
        padding: 10px 0;
    }
}

